# illustrator

./: .env.demo  .env.example  .gitignore  Dockerfile  LICENSE.md  PERSISTENCE_IMPLEMENTATION.md  PROMPT_ENGINEERING_IMPROVEMENTS.md  README.md  advanced_eh_shepard_config.json  check_import.py  check_import2.py  classic_novels_test.py  debug_prompt_run.py  demo_client_server_modes.py  eh_shepard_2.json  eh_shepard_pencil_config.json  generate_pencil_sketches.py  generate_scene_illustrations.py  illustrator.db  langgraph.json  migrate_images_to_db.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_app_startup.py  test_chapter.txt  test_delete_fix.py  test_eh_shepard_prompts.py  test_enhanced_prompts.py  test_import.py  test_manuscript_validation.py  test_output.txt  test_persistence.py  test_remote_modes.py  test_story.txt  test_web_imports.py  verify_url_fix.py
illustrator_output/Fortunes_Told_(A_Voyager's_Guide_To_Life_Between_Worlds)/: manuscript_analysis.json
illustrator_output/Fortunes_Told_(A_Voyager's_Guide_to_Life_Between_Worlds)/: manuscript_analysis.json
pencil_sketches/: Alice_meets_White_Rabbit_info.txt  Christopher_Robin_and_toys_info.txt  Long_John_Silver_arrival_info.txt  Mary_enters_secret_garden_info.txt  Mole_and_Rat_by_river_info.txt  Moomintroll_in_valley_info.txt  Peter_Rabbit_in_garden_info.txt  Pooh_and_Piglet_walking_info.txt  Ratty_in_boat_info.txt  Wolf_family_in_cave_info.txt
saved_manuscripts/: Fortunes Told A Voyagers Guide To Life Between Worlds_20250921_105612.json  Fortunes Told A Voyagers Guide To Life Between Worlds_20250921_110040.json  Fortunes Told A Voyagers Guide To Life Between Worlds_20250921_110838.json  Fortunes Told A Voyagers Guide To Life Between Worlds_20250922_183558.json  Fortunes Told A Voyagers Guide To Life Between Worlds_20250927_052137.json  Fortunes Told A Voyagers Guide To Life Between Worlds_20250927_221805.json  Fortunes Told A Voyagers Guide To Life Between Worlds_20250927_225141.json  Fortunes Told A Voyagers Guide To Life Between Worlds_20250928_201031.json  Fortunes Told A Voyagers Guide to Life Between Worlds_20250930_074134.json  Fortunes Told A Voyagers Guide to Life Between Worlds_20251002_080410.json  Fortunes Told A Voyagers Guide to Life Between Worlds_20251002_133610.json  Test Manuscript_20250922_202501.json  Test Novel_20250923_014638.json  Test Novel_20250923_014755.json  Test Novel_20250923_014814.json  Test Novel_20250923_023510.json  Test Novel_20250923_063210.json  Test Novel_20250923_063633.json  Test Novel_20250923_065640.json  Test Novel_20250923_071945.json  Test Novel_20250923_072700.json  Test Novel_20250923_074332.json  Test Novel_20250923_074751.json  Test Novel_20250923_095105.json  Test Novel_20250923_095839.json  Test Novel_20250923_100154.json  Test Novel_20250927_184353.json  Test Novel_20250927_185008.json  Test Novel_20250927_185225.json  Test Novel_20250927_185900.json  Test Novel_20250927_190718.json  Test Novel_20250927_190923.json  Test Novel_20250927_191929.json  Test Novel_20250927_192026.json  Test Novel_20250927_201523.json  Test Novel_20250927_203635.json  Test Novel_20250927_204126.json  Test Novel_20250927_204838.json  Test Novel_20250927_205137.json  Test Novel_20250927_205250.json  (+13 more)
saved_manuscripts/style_configs/: 020ee54b-3b49-52a8-9a7d-43d2e67ba4d5_style.json  04fede77-6d91-5c15-99cc-fe35102dd703_style.json  1058efb5-e4fd-547a-a119-67b38d9d429b_style.json  3938f8ad-7291-5b5b-97b3-9eb7afa48a39_style.json  3b776c9e-1446-54d3-997b-3d192b1b8250_style.json  c11e1a16-cc00-571a-a6d5-da3c700b8861_style.json
scene_illustrations/Fortunes_Told_A_Voyager's_Guide_To_Life_Between_Worlds/: chapter_01_analysis.json  chapter_01_scene_01_metadata.json  chapter_01_scene_02_metadata.json  chapter_01_scene_03_metadata.json  chapter_01_scene_04_metadata.json  chapter_01_scene_05_metadata.json  chapter_01_scene_06_metadata.json  chapter_01_scene_07_metadata.json  chapter_01_scene_08_metadata.json  chapter_01_scene_09_metadata.json  chapter_01_scene_10_metadata.json  chapter_02_analysis.json  chapter_02_scene_01_metadata.json  chapter_02_scene_03_metadata.json  chapter_02_scene_04_metadata.json  chapter_02_scene_05_metadata.json  chapter_02_scene_06_metadata.json  chapter_02_scene_07_metadata.json  chapter_02_scene_08_metadata.json  chapter_02_scene_09_metadata.json  chapter_02_scene_10_metadata.json  chapter_03_analysis.json  chapter_03_scene_01_metadata.json  chapter_03_scene_02_metadata.json  chapter_03_scene_03_metadata.json  chapter_03_scene_04_metadata.json  chapter_03_scene_05_metadata.json  chapter_03_scene_06_metadata.json  chapter_04_analysis.json  chapter_04_scene_01_metadata.json  chapter_04_scene_02_metadata.json  chapter_04_scene_03_metadata.json  chapter_04_scene_04_metadata.json  chapter_04_scene_05_metadata.json  chapter_04_scene_06_metadata.json  chapter_04_scene_07_metadata.json  chapter_04_scene_08_metadata.json  chapter_04_scene_09_metadata.json  chapter_04_scene_10_metadata.json  chapter_05_analysis.json  (+98 more)
src/illustrator/: __init__.py  analysis.py  character_tracking.py  cli.py  context.py  database.py  db_config.py  db_models.py  error_handling.py  generate_scene_illustrations.py  graph.py  llm_factory.py  models.py  narrative_analysis.py  parallel_processor.py  prompt_engineering.py  providers.py  quality_feedback.py  quality_models.py  scene_detection.py  state.py  utils.py  visual_composition.py
test_saved_manuscripts/: test_manuscript.json
tests/: __init__.py  conftest.py  test_replicate_provider.py
tests/integration/: __init__.py  test_comprehensive_workflow.py  test_enhanced_workflow.py  test_new_api_endpoints.py  test_remote_proxy_integration.py  test_web_api.py  test_workflow.py  test_workflows.py
tests/unit/: __init__.py  test_analysis.py  test_analysis_comprehensive.py  test_chapter_analysis_routes.py  test_chapter_routes.py  test_character_tracking.py  test_cli.py  test_context.py  test_database.py  test_db_config.py  test_db_models.py  test_enhanced_prompt_engineering.py  test_error_handling.py  test_graph.py  (+25 more)
utils/: version.py
(+8001 files in other folders)
