[project]
name = "illustrator"
version = "0.1.0"
description = "A LangGraph application for analyzing manuscripts and generating illustrations using AI"
authors = [
    { name = "David James Lennon", email = "david@othertales.co" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # LangGraph and LangChain ecosystem
    "langgraph>=0.6.7",
    "langgraph-sdk>=0.2.9",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-anthropic>=0.3.20",
    "python-dotenv>=1.1.1",
    # Persistence and data access
    "sqlalchemy>=2.0.43",
    # NLP and text processing
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "nltk>=3.9.1",
    "transformers>=4.56.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    # Image generation APIs
    "openai>=1.109.1",
    "google-cloud-aiplatform>=1.117.0",
    "huggingface_hub>=0.35.1",
    "requests>=2.32.5",
    "aiohttp>=3.12.15",
    # CLI and utilities
    "click>=8.3.0",
    "rich>=14.1.0",
    "pydantic>=2.11.9",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.117.1",
    "uvicorn>=0.37.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "httpx>=0.28.1",
    # Exports
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
    "weasyprint>=66.0",
]
db = [
    "psycopg2-binary>=2.9.10"
]
dev = [
    "beautifulsoup4>=4.13.5",
    "langsmith>=0.4.31",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "selenium>=4.35.0",
]

[project.scripts]
illustrator = "illustrator.cli:main"

[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["illustrator"]
[tool.setuptools.package-dir]
"illustrator" = "src/illustrator"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
include = ["*.py", "*.pyi", "*.ipynb"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_errors = true
