[project]
name = "illustrator"
version = "0.1.0"
description = "A LangGraph application for analyzing manuscripts and generating illustrations using AI"
authors = [
    { name = "David James Lennon", email = "david@othertales.co" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # LangGraph and LangChain ecosystem
    "langgraph>=0.6.8",
    "langgraph-sdk>=0.2.9",
    "langchain>=0.3.27",
    "langchain-core>=0.3.77",
    "langchain-openai>=0.3.34",
    "langchain-anthropic>=0.3.21",
    "python-dotenv>=1.1.1",
    # Persistence and data access
    "pymongo>=4.15.2",
    "mongomock>=4.3.0",
    # NLP and text processing
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "nltk>=3.9.2",
    "transformers>=4.56.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "diffusers>=0.35.1",
    "accelerate>=1.10.1",
    # Image generation APIs
    "openai>=2.0.1",
    "google-cloud-aiplatform>=1.118.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "anthropic[vertex]>=0.69.0",
    "huggingface_hub>=0.35.3",
    "langchain-huggingface>=0.3.1",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "aiohttp>=3.12.15",
    # CLI and utilities
    "click>=8.3.0",
    "rich>=14.1.0",
    "pydantic>=2.11.9",
    "pillow>=11.3.0",
    # Selenium 4.35.0 pins typing_extensions to 4.14.x
    "typing_extensions>=4.14,<4.15",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "httpx>=0.28.1",
    # Exports
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
    "weasyprint>=66.0",
]
dev = [
    "beautifulsoup4>=4.14.2",
    "langsmith>=0.4.31",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
illustrator = "illustrator.cli:main"

[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["illustrator"]
[tool.setuptools.package-dir]
"illustrator" = "src/illustrator"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
include = ["*.py", "*.pyi", "*.ipynb"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_errors = true
